--- a/index.html
+++ b/index.html
@@ -5,16 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My first assigignment</title>
 
+
+
+    <link rel="stylesheet" href="styles/portfolio.css">
 </head>
 <body>
     <header>
-
+       <nav>
+        <h3>Mary</h3>
+        <ul>
+            <li><a href="">Portfolio</a></li>    
+            <li><a href="">Blog</a></li>
+            <li><button>Hire Me</button></li>
+        </ul>
+       </nav> 
     </header>
+
+    
     <main>
 
     </main>
     <footer>
-        
+
     </footer>
 </body>
 </html>
